--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,12 @@ header {
     padding-bottom: 20px;
 }
 
+header .logo {
+    width: 100px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
 header h1 {
     margin: 0;
     font-size: 2.5em;
